fixed alignment and links on subpage

--- a/main.less
+++ b/main.less
@@ -223,10 +223,13 @@ body {
 
 .service-info {
   background-color: @logo-pink-light;
-  border: 2em;
-  margin: 5% 5%;
+  margin: 10% 5%;
   color: black;
 
+}
+
+.main-image {
+  width: 100%;
 }
 
 
